# bookish-app

./: .gitignore  App.tsx  README.md  TICKET_COMPLETION.md  index.html  metadata.json  package-lock.json  package.json  theme.ts  types.ts  vite.config.ts
backend/: .env.example  API_REFERENCE.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  Makefile  QUICKSTART.md  README.md  TICKET_SUMMARY.md  __init__.py  example_usage.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  setup.sh
backend/app/: main.py  mime_utils.py  models.py  parsers.py  schemas.py  text_utils.py
backend/app/models/: __init__.py  analysis.py
backend/app/routers/: analysis.py
backend/app/services/: __init__.py  document_parser.py  knowledge_base_client.py  medical_agent.py
backend/tests/: __init__.py  create_fixtures.py  test_acceptance.py  test_analysis.py  test_document_parser.py  test_medical_agent.py
backend/tests/fixtures/: sample_text.txt
components/: BottomNav.tsx  Button.tsx  Input.tsx
screens/: AuthScreen.tsx  BookDetailScreen.tsx  DashboardScreen.tsx  LandingScreen.tsx  LibraryScreen.tsx  MarketplaceScreen.tsx  MedicalAnalysisScreen.tsx  NotificationScreen.tsx  ProfileScreen.tsx  SplashScreen.tsx  SubmitBookScreen.tsx
services/: api.ts  geminiService.ts
