[tool.poetry]
name = "medic-roxx-backend"
version = "0.1.0"
description = "Backend for MEDIC-ROXX services"
authors = ["Admin <admin@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
crewai = "^0.1.0"
langchain = "^0.1.0"
pdfplumber = "^0.10.0"
pdf2image = "^1.17.0"
pytesseract = "^0.3.10"
pillow = "^10.0.0"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
pydantic-settings = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
